feat: add RAG, GitHub intel and Web QA notebooks plus MCP tools

--- a/notebooks/devtools/github_repo_intel.ipynb
+++ b/notebooks/devtools/github_repo_intel.ipynb
@@ -62,6 +62,8 @@
     "\n",
     "from thordata import ThordataClient\n",
     "\n",
+    "from pathlib import Path\n",
+    "\n",
     "load_dotenv()"
    ]
   },
@@ -75,20 +77,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "CWD: D:\\Thordata_Work\\thordata-cookbook\\notebooks\\devtools\n",
+      "ROOT_DIR: D:\\Thordata_Work\\thordata-cookbook\n",
       "USE_LIVE_THORDATA: False\n",
-      "GITHUB_JSON_CACHE_PATH: data\\github_repo_intel_sample.json\n"
+      "GITHUB_JSON_CACHE_PATH: D:\\Thordata_Work\\thordata-cookbook\\data\\github_repo_intel_sample.json\n"
      ]
     }
    ],
    "source": [
+    "# Resolve project root from this notebook location:\n",
+    "# notebooks/devtools -> parent = notebooks -> parent = repo root\n",
+    "ROOT_DIR = Path.cwd().parents[1]\n",
+    "\n",
     "# Toggle between live API calls and local cached JSON data.\n",
     "# Set to True only when you want to consume Thordata credits.\n",
     "USE_LIVE_THORDATA = False\n",
     "\n",
-    "# Local cache path for GitHub scraper JSON\n",
-    "CACHE_DIR = \"data\"\n",
-    "GITHUB_JSON_CACHE_PATH = os.path.join(CACHE_DIR, \"github_repo_intel_sample.json\")\n",
+    "# Local cache path for GitHub scraper JSON (under repo root)\n",
+    "CACHE_DIR = ROOT_DIR / \"data\"\n",
+    "GITHUB_JSON_CACHE_PATH = CACHE_DIR / \"github_repo_intel_sample.json\"\n",
     "\n",
+    "print(\"CWD:\", os.getcwd())\n",
+    "print(\"ROOT_DIR:\", ROOT_DIR)\n",
     "print(\"USE_LIVE_THORDATA:\", USE_LIVE_THORDATA)\n",
     "print(\"GITHUB_JSON_CACHE_PATH:\", GITHUB_JSON_CACHE_PATH)"
    ]
@@ -102,7 +112,7 @@
     {
      "data": {
       "text/plain": [
-       "'github_repo_intel_TheAlgorithms_Python_1764230994'"
+       "'github_repo_intel_TheAlgorithms_Python_20251128_101402'"
       ]
      },
      "execution_count": 4,
@@ -133,8 +143,9 @@
     "    GITHUB_TARGET_PARAMS[\"repo_url\"].rstrip(\"/\").split(\"/\")[-2:]\n",
     ")\n",
     "\n",
-    "# Dynamic output file name, e.g. github_repo_intel_TheAlgorithms_Python_1732700000\n",
-    "OUTPUT_FILE_NAME = f\"github_repo_intel_{repo_slug}_{int(time.time())}\"\n",
+    "# Dynamic output file name, e.g. github_repo_intel_TheAlgorithms_Python_20251127_163045.csv\n",
+    "timestamp = time.strftime(\"%Y%m%d_%H%M%S\")\n",
+    "OUTPUT_FILE_NAME = f\"github_repo_intel_{repo_slug}_{timestamp}\"\n",
     "OUTPUT_FILE_NAME"
    ]
   },
@@ -147,7 +158,7 @@
     {
      "data": {
       "text/plain": [
-       "<thordata.client.ThordataClient at 0x1d8bd0d1400>"
+       "<thordata.client.ThordataClient at 0x28c2ab11400>"
       ]
      },
      "execution_count": 5,
@@ -275,7 +286,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading cached JSON from data\\github_repo_intel_sample.json\n"
+      "Loading cached JSON from D:\\Thordata_Work\\thordata-cookbook\\data\\github_repo_intel_sample.json\n"
      ]
     },
     {
@@ -1459,12 +1470,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved cleaned data to github_repo_intel_TheAlgorithms_Python_1764230994.csv\n"
+      "Saved cleaned data to D:\\Thordata_Work\\thordata-cookbook\\data\\github_repo_intel_TheAlgorithms_Python_20251128_101402.csv\n"
      ]
     }
    ],
    "source": [
-    "output_csv = f\"{OUTPUT_FILE_NAME}.csv\"\n",
+    "# Save CSV under the shared data/ directory at repo root\n",
+    "output_csv = CACHE_DIR / f\"{OUTPUT_FILE_NAME}.csv\"\n",
     "df_selected.to_csv(output_csv, index=False, encoding=\"utf-8\")\n",
     "print(f\"Saved cleaned data to {output_csv}\")"
    ]
