refactor: modernize mcp server and pipelines using sdk v1.1.0

--- a/notebooks/ai/web_qa_agent_with_thordata.ipynb
+++ b/notebooks/ai/web_qa_agent_with_thordata.ipynb
@@ -41,16 +41,15 @@
     }
    ],
    "source": [
-    "import os\n",
     "import json\n",
+    "import os\n",
     "from pathlib import Path\n",
-    "from typing import List, Dict, Any, Optional\n",
+    "from typing import Any\n",
     "\n",
     "import pandas as pd\n",
     "from bs4 import BeautifulSoup\n",
     "from dotenv import load_dotenv\n",
-    "\n",
-    "from thordata import ThordataClient, Engine\n",
+    "from thordata import Engine, ThordataClient\n",
     "\n",
     "# Optional: try to import OpenAI for LLM\n",
     "try:\n",
@@ -134,12 +133,12 @@
     "    query: str,\n",
     "    num_results: int = 3,\n",
     "    engine: Engine = Engine.GOOGLE,\n",
-    "    location: Optional[str] = None,\n",
-    ") -> List[Dict[str, Any]]:\n",
+    "    location: str | None = None,\n",
+    ") -> list[dict[str, Any]]:\n",
     "    \"\"\"\n",
     "    Use Thordata SERP API to search the web and return a list of basic results.\n",
     "    \"\"\"\n",
-    "    extra_params: Dict[str, Any] = {}\n",
+    "    extra_params: dict[str, Any] = {}\n",
     "    if location:\n",
     "        extra_params[\"location\"] = location\n",
     "\n",
@@ -152,7 +151,7 @@
     "    )\n",
     "\n",
     "    organic = results.get(\"organic\") or []\n",
-    "    cleaned: List[Dict[str, Any]] = []\n",
+    "    cleaned: list[dict[str, Any]] = []\n",
     "    for item in organic:\n",
     "        cleaned.append(\n",
     "            {\n",
@@ -202,10 +201,10 @@
     "    query: str,\n",
     "    num_results: int = 3,\n",
     "    engine: Engine = Engine.GOOGLE,\n",
-    "    location: Optional[str] = None,\n",
+    "    location: str | None = None,\n",
     "    js_render: bool = True,\n",
     "    per_doc_max_chars: int = 4000,\n",
-    ") -> List[Dict[str, Any]]:\n",
+    ") -> list[dict[str, Any]]:\n",
     "    \"\"\"\n",
     "    High-level function: search the web and fetch cleaned text for top results.\n",
     "\n",
@@ -214,7 +213,7 @@
     "    \"\"\"\n",
     "    serp_results = search_web_serp(query, num_results=num_results, engine=engine, location=location)\n",
     "\n",
-    "    docs: List[Dict[str, Any]] = []\n",
+    "    docs: list[dict[str, Any]] = []\n",
     "    for idx, item in enumerate(serp_results, start=1):\n",
     "        url = item.get(\"link\")\n",
     "        if not url:\n",
@@ -344,8 +343,8 @@
     "    question: str,\n",
     "    num_results: int = 3,\n",
     "    engine: Engine = Engine.GOOGLE,\n",
-    "    location: Optional[str] = None,\n",
-    ") -> List[Dict[str, Any]]:\n",
+    "    location: str | None = None,\n",
+    ") -> list[dict[str, Any]]:\n",
     "    \"\"\"\n",
     "    Orchestrator: in live mode, fetch docs from web and cache them.\n",
     "    In offline mode, load docs from the local cache.\n",
@@ -397,7 +396,7 @@
     "\n",
     "def summarize_with_llm(\n",
     "    question: str,\n",
-    "    docs: List[Dict[str, Any]],\n",
+    "    docs: list[dict[str, Any]],\n",
     "    model: str = \"gpt-4o-mini\",\n",
     ") -> str:\n",
     "    \"\"\"\n",
