--- a/notebooks/devtools/github_repo_intel.ipynb
+++ b/notebooks/devtools/github_repo_intel.ipynb
@@ -50,19 +50,17 @@
     }
    ],
    "source": [
+    "import json\n",
     "import os\n",
     "import time\n",
-    "import json\n",
-    "from typing import Dict, Any\n",
+    "from pathlib import Path\n",
+    "from typing import Any\n",
     "\n",
     "import pandas as pd\n",
     "import requests\n",
     "from dotenv import load_dotenv\n",
     "from IPython.display import display\n",
-    "\n",
     "from thordata import ThordataClient\n",
-    "\n",
-    "from pathlib import Path\n",
     "\n",
     "load_dotenv()"
    ]
@@ -186,7 +184,7 @@
     "def run_github_repo_task(\n",
     "    spider_id: str,\n",
     "    spider_name: str,\n",
-    "    repo_params: Dict[str, Any],\n",
+    "    repo_params: dict[str, Any],\n",
     "    file_name: str,\n",
     "    poll_interval: int = 10,\n",
     "    max_wait_minutes: int = 6,\n",
@@ -477,7 +475,7 @@
     "else:\n",
     "    # Load from local cache without consuming any credits\n",
     "    print(f\"Loading cached JSON from {GITHUB_JSON_CACHE_PATH}\")\n",
-    "    with open(GITHUB_JSON_CACHE_PATH, \"r\", encoding=\"utf-8\") as f:\n",
+    "    with open(GITHUB_JSON_CACHE_PATH, encoding=\"utf-8\") as f:\n",
     "        records = json.load(f)\n",
     "    df = pd.DataFrame.from_records(records)\n",
     "\n",
@@ -895,7 +893,7 @@
     "\n",
     "        # 4. 使用 to_numeric，无法解析的值变成 NaN（errors='coerce'）\n",
     "        df[col] = pd.to_numeric(series, errors=\"coerce\")\n",
-    "        \n",
+    "\n",
     "# Define columns we care about\n",
     "possible_cols = [\n",
     "    \"url\",\n",
