--- a/notebooks/rag/rag_openai_research.ipynb
+++ b/notebooks/rag/rag_openai_research.ipynb
@@ -36,14 +36,13 @@
    ],
    "source": [
     "import os\n",
-    "from typing import List\n",
+    "from datetime import datetime\n",
+    "from pathlib import Path\n",
     "\n",
     "from bs4 import BeautifulSoup\n",
     "from dotenv import load_dotenv\n",
-    "\n",
     "from thordata import ThordataClient\n",
-    "from datetime import datetime\n",
-    "from pathlib import Path\n",
+    "\n",
     "load_dotenv()  # Load THORDATA_* tokens from .env"
    ]
   },
@@ -111,7 +110,7 @@
     "    for tag in soup([\"script\", \"style\", \"nav\", \"footer\", \"iframe\", \"noscript\"]):\n",
     "        tag.decompose()\n",
     "\n",
-    "    markdown_lines: List[str] = []\n",
+    "    markdown_lines: list[str] = []\n",
     "\n",
     "    # Headings (H1–H3)\n",
     "    for heading in soup.find_all([\"h1\", \"h2\", \"h3\"]):\n",
@@ -208,12 +207,12 @@
     "    # 1) Prefer an existing cleaned markdown file if present\n",
     "    if os.path.exists(CLEAN_MD_FALLBACK_PATH):\n",
     "        print(f\"Loading cleaned markdown directly from {CLEAN_MD_FALLBACK_PATH}\")\n",
-    "        with open(CLEAN_MD_FALLBACK_PATH, \"r\", encoding=\"utf-8\") as f:\n",
+    "        with open(CLEAN_MD_FALLBACK_PATH, encoding=\"utf-8\") as f:\n",
     "            markdown_content = f.read()\n",
     "    # 2) Otherwise, try to load cached raw HTML and clean it\n",
     "    elif os.path.exists(RAW_HTML_PATH):\n",
     "        print(f\"Loading cached HTML from {RAW_HTML_PATH}\")\n",
-    "        with open(RAW_HTML_PATH, \"r\", encoding=\"utf-8\") as f:\n",
+    "        with open(RAW_HTML_PATH, encoding=\"utf-8\") as f:\n",
     "            html = f.read()\n",
     "        markdown_content = clean_html_to_markdown(html)\n",
     "    else:\n",
